--- a/themes/kevingimbel/layouts/partials/footer.html
+++ b/themes/kevingimbel/layouts/partials/footer.html
@@ -42,7 +42,8 @@
     </li>
   </ul>
   <hr class="divider">
-  <p>Content &copy; 2013-2017 Kevin Gimbel - Build with <a href="https://gohugo.io">Hugo</a> - <a href="/imprint/">Imprint</a></p>
+  <p>Content &copy; 2013-2017 Kevin Gimbel</p>
+  <p>Build with <a href="https://gohugo.io">Hugo</a> - <a href="/imprint/">Imprint</a> - <a href="/now/">now</a></p>
   <p><span class="icon-flex__wrap">
     <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-planet"></use></svg>
     <a href="https://uberspace.de">Hosted on asteroids</a></p>
