--- a/themes/kevingimbel/src/sass/modules/_article.scss
+++ b/themes/kevingimbel/src/sass/modules/_article.scss
@@ -138,3 +138,33 @@ main ul li {
     font-size: 1.5rem;
   }
 }
+
+blockquote {
+  padding: 2rem;
+  margin: 1rem 0;
+  background: #ddd;
+  font-family: monospace;
+  position: relative;
+  border-left: 5px solid deeppink;
+
+    &:before {
+      content: '"';
+      background-color: deeppink;
+      width: 2rem;
+      height: 2rem;
+      position: absolute;
+      top: -.75rem;
+      left: -1.15rem;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 1.3;
+      color: #fff;
+      font-size: 2.5rem;
+      font-style: italic;
+      text-indent: -.5rem;
+    }
+
+    p {
+      padding: 0 !important;
+    }
+}
