--- a/themes/kevingimbel/src/sass/modules/_highlight.scss
+++ b/themes/kevingimbel/src/sass/modules/_highlight.scss
@@ -23,11 +23,11 @@ p > code {
 
 .highlight {
   position: relative;
-  border-left: 5px solid blue;
+  border-left: 5px solid $color-accent;
 
   &:before {
     content: '</>';
-    background-color: blue;
+    background-color: $color-accent;
     width: 2rem;
     height: 2rem;
     position: absolute;
