NEW POST: ws bash function; Add twitter meta tags

--- a/themes/kevingimbel/layouts/_default/baseof.html
+++ b/themes/kevingimbel/layouts/_default/baseof.html
@@ -10,6 +10,10 @@
   <meta name="keywords" content="Front-End, Developer, CSS, Bash, Go, JavaScript, Germany, Frankfurt, Docker, Magento" />
   <meta name="viewport" content="width=device-width" />
   <meta name="theme-color" content="#E91E63">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@_kevinatari" />
+  <meta name="twitter:title" content="{{ .Title }}" />
+  <meta name="twitter:description" content="{{ .Summary | plainify }}" />
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="icon" type="image/png" href="/favicon.png" sizes="64x64">
   <link rel="stylesheet" href="/css/style.css" />
