--- a/themes/kevingimbel/layouts/_default/baseof.html
+++ b/themes/kevingimbel/layouts/_default/baseof.html
@@ -13,7 +13,10 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@_kevinatari" />
   <meta name="twitter:title" content="{{ .Title }}" />
-  <meta name="twitter:description" content="{{ .Summary | plainify }}" />
+  {{ with .Summary }}
+  <meta name="twitter:description" content="{{ . | plainify }}" />
+  {{ else }}
+  {{ end }}
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="icon" type="image/png" href="/favicon.png" sizes="64x64">
   <link rel="stylesheet" href="/css/style.css" />
