[FEATURE] Add 'About the author' block
- Add 'About the author' block to all articles
- Slightly change featured__title for featured article (home)

--- a/themes/kevingimbel/layouts/index.html
+++ b/themes/kevingimbel/layouts/index.html
@@ -6,7 +6,7 @@
 
 <section id="main" class="wrap">
 
-<section class="home-section">
+<section class="home-section featured-article">
   <p class="h6 featured__title">
     <span class="icon-flex__wrap">
       <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-quote"></use></svg>
