--- a/themes/kevingimbel/src/sass/style.scss
+++ b/themes/kevingimbel/src/sass/style.scss
@@ -15,4 +15,5 @@
         "modules/list",
         "modules/highlight",
         "modules/project",
-        "modules/article";
+        "modules/article",
+        "modules/about";
