--- a/themes/kevingimbel/layouts/post/single.html
+++ b/themes/kevingimbel/layouts/post/single.html
@@ -18,6 +18,8 @@
       href="http://github.com/kevingimbel/kevingimbel.com/blob/master/content/{{.File.Path}}">Edit this post on GitHub</a> or <a href="https://twitter.com/_kevinatari">let me know on Twitter</a>.
   </footer>
 
+  {{ partial "about-the-author.html" }}
+
   {{ range $script := .Params.scripts }}
     <script src="{{ $script }}"></script>
   {{ end }}
