New Post; Adjust some CSS and templates

--- a/themes/kevingimbel/src/sass/style.scss
+++ b/themes/kevingimbel/src/sass/style.scss
@@ -9,7 +9,8 @@
         "core/footer";
 
 @import "objects/flex",
-        "objects/icon";
+        "objects/icon",
+        "objects/embed";
 
 @import "modules/navigation",
         "modules/list",
