Various CSS adjustments across the site

--- a/themes/kevingimbel/layouts/partials/header.html
+++ b/themes/kevingimbel/layouts/partials/header.html
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en-US">
-<head>
-  <meta charset="utf-8">
-  <base href="{{ .Site.BaseURL }}">
-  {{ .Hugo.Generator }}
-  <title>{{ with .Title }} {{ . }} {{ else }}Kevin Gimbel &mdash; Developer{{ end }}</title>
-  <meta name="description" content="{{ .Site.Params.description }}">
-  <meta name="author" content="{{ .Site.Params.author }}">
-  <meta name="keywords" content="Front-End, Developer, CSS, Bash, Go, JavaScript, Germany, Frankfurt, Docker, Magento" />
-  <meta name="viewport" content="width=device-width" />
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/highlight.css" />
-</head>
-<body lang="en">
 <header class="site__header">
   <div class="wrap">
     <h1>Kevin Gimbel</h1>
-    <h2>Developer &amp; <span id="word_switch">video game enthusiast</span></h2>
+    <p class="h5">Developer &amp; <span id="word_switch">video game enthusiast</span></p>
     {{ partial "nav.html" }}
   </div>
 </header>
-<main role="main" class="content">
