--- a/themes/kevingimbel/layouts/_default/baseof.html
+++ b/themes/kevingimbel/layouts/_default/baseof.html
@@ -25,13 +25,9 @@
   {{ end }}
 </head>
 <body lang="en">
-<header class="site__header">
-  <div class="wrap">
-    <h1>Kevin Gimbel</h1>
-    <h2>Developer &amp; <span id="word_switch">video game enthusiast</span></h2>
-    {{ partial "nav.html" }}
-  </div>
-</header>
+
+{{- partial "header.html" -}}
+
 <main role="main" class="content">
   {{ block "main" . }}
     <!-- The part of the page that begins to differ between templates -->
