--- a/themes/kevingimbel/src/sass/modules/_list.scss
+++ b/themes/kevingimbel/src/sass/modules/_list.scss
@@ -41,7 +41,7 @@
 .tag-list li {
   display: block;
   min-width: 150px;
-  background: #eee;
+  background: #f1f1f1;
   margin-right: 1rem;
   margin-bottom: 1rem;
   text-align: center;
