--- a/themes/kevingimbel/src/sass/objects/_embed.scss
+++ b/themes/kevingimbel/src/sass/objects/_embed.scss
@@ -6,3 +6,27 @@
   padding: 1rem 0;
   margin: 0 auto;
 }
+
+.video-container {
+  margin: 1rem 0;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media all and (min-width: 60rem) {
+  .video-container {
+    width: 105%;
+    margin-left: -2.5%;
+  }
+}
