Add Google Analytics

--- a/themes/kevingimbel/layouts/partials/footer.html
+++ b/themes/kevingimbel/layouts/partials/footer.html
@@ -47,6 +47,7 @@
   <p><span class="icon-flex__wrap">
     <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-planet"></use></svg>
     <a href="https://uberspace.de">Hosted on asteroids</a></p>
+  <small>This website uses Google Analytics. <a href="/imprint#tracking" title="Find out more about tracking">More about tracking</a>.</small>
   </span>
   </div>
 </footer>
