Fix ul styles; Add new project

--- a/themes/kevingimbel/src/sass/core/_base.scss
+++ b/themes/kevingimbel/src/sass/core/_base.scss
@@ -165,6 +165,10 @@ figcaption {
   padding: 2rem 0;
 }
 
+.page-body ul {
+  margin: 0 0 1rem 2rem;
+}
+
 .inner, .wrap {
   width: 100%;
   max-width: 80rem;
