--- a/themes/kevingimbel/layouts/_default/baseof.html
+++ b/themes/kevingimbel/layouts/_default/baseof.html
@@ -28,7 +28,7 @@
 
 {{- partial "header.html" -}}
 
-<main role="main" class="content">
+<main class="content">
   {{ block "main" . }}
     <!-- The part of the page that begins to differ between templates -->
   {{ end }}
