--- a/themes/kevingimbel/layouts/partials/footer.html
+++ b/themes/kevingimbel/layouts/partials/footer.html
@@ -44,10 +44,12 @@
   <hr class="divider">
   <p>Content &copy; 2013-2017 Kevin Gimbel</p>
   <p>Build with <a href="https://gohugo.io">Hugo</a> - <a href="/imprint/">Imprint</a> - <a href="/now/">now</a></p>
-  <p><span class="icon-flex__wrap">
-    <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-planet"></use></svg>
-    <a href="https://uberspace.de">Hosted on asteroids</a></p>
+  <p>
+    <span class="icon-flex__wrap">
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-planet"></use></svg>
+      <a href="https://uberspace.de">Hosted on asteroids</a>
+    </span>
+  </p>
   <small>This website uses Google Analytics. <a href="/imprint#tracking" title="Find out more about tracking">More about tracking</a>.</small>
-  </span>
   </div>
 </footer>
