--- a/themes/kevingimbel/layouts/partials/nav.html
+++ b/themes/kevingimbel/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<nav role="navigation">
+<nav>
   <ul class="flex navigation">
     <li><a href="/" title="Home - I can't think of a good description.">Home</a></li>
     <li><a href="/about" title="About - Find out more about what I do.">About</a></li>
