--- a/themes/kevingimbel/layouts/partials/footer.html
+++ b/themes/kevingimbel/layouts/partials/footer.html
@@ -51,5 +51,6 @@
     </span>
   </p>
   <small>This website uses Google Analytics. <a href="/imprint#tracking" title="Find out more about tracking">More about tracking</a>.</small>
+  <p><small>Links marked with an <b>"R"</b> are amazon referral links, like <a href="http://amzn.to/2ltBPO6" rel="nofollow">this one</a>.</small></p>
   </div>
 </footer>
