--- a/themes/kevingimbel/layouts/projects/single.html
+++ b/themes/kevingimbel/layouts/projects/single.html
@@ -6,7 +6,7 @@
   <header class="article__header">
     <div class="inner">
       <h2 class="title">{{ .Title }}</h2>
-      <p><a href="{{ .Params.project_url }}">Lern more on GitHub</a></p>
+      <p><a href="{{ .Params.project_url }}">Learn more on GitHub</a></p>
     </div>
   </header>
 
