--- a/themes/kevingimbel/src/sass/core/_vars.scss
+++ b/themes/kevingimbel/src/sass/core/_vars.scss
@@ -1,4 +1,4 @@
-$color-accent: #0259bb; //#3F51B5;
+$color-accent: #000be0; //#0259bb; //#3F51B5;
 $color-accent--secondary: #E91E63;
 $color-accent--dark: #000;
 
