--- a/themes/kevingimbel/layouts/partials/header.html
+++ b/themes/kevingimbel/layouts/partials/header.html
@@ -1,7 +1,13 @@
 <header class="site__header">
   <div class="wrap">
-    <h1>Kevin Gimbel</h1>
-    <p class="h5">Developer &amp; <span id="word_switch">video game enthusiast</span></p>
-    {{ partial "nav.html" }}
+    <div class="header-flex">
+      <div class="flex-item">
+        <h1>Kevin Gimbel</h1>
+        <p class="title-small">Developer &amp; <span id="word_switch">video game enthusiast</span></p>
+      </div>
+      <div class="flex-item">
+        {{ partial "nav.html" }}
+      </div>
+    </div>
   </div>
 </header>
