--- a/themes/kevingimbel/src/sass/modules/_navigation.scss
+++ b/themes/kevingimbel/src/sass/modules/_navigation.scss
@@ -1,8 +1,20 @@
 .navigation {
   list-style: none;
-  
+
   li {
     margin-right: 1rem;
     padding: .25rem;
+  }
+}
+
+@media all and (max-width: 30rem) {
+  .navigation {
+    margin-top: 1rem;
+  }
+  
+  .navigation li {
+    width: 50%;
+    text-align: center;
+    margin: 0;
   }
 }
