--- a/themes/kevingimbel/src/sass/core/_header.scss
+++ b/themes/kevingimbel/src/sass/core/_header.scss
@@ -1,7 +1,7 @@
 .site__header {
   background: $color-accent;
   color: white;
-  padding: 2rem;
+  padding: .5rem 2rem;
 
     a {
       color: white;
