--- a/themes/kevingimbel/layouts/partials/nav.html
+++ b/themes/kevingimbel/layouts/partials/nav.html
@@ -3,7 +3,7 @@
     <li><a href="/" title="Home - I can't think of a good description.">Home</a></li>
     <li><a href="/about" title="About - Find out more about what I do.">About</a></li>
     <li><a href="/projects" title="Projects - Things I build, mostly Bash and Javascript.">Projects</a></li>
-    <li><a href="/tags" title="Tags - List of all tags used for posts.">Tags</a></li>
     <li><a href="/archive" title="Archive - All the posts ever written.">Archive</a></li>
+    <li><a href="/now" title="Now - Quick list of what I am doing now">Now</a></li>
   </ul>
 </nav>
