--- a/themes/kevingimbel/layouts/taxonomy/tag.html
+++ b/themes/kevingimbel/layouts/taxonomy/tag.html
@@ -4,7 +4,7 @@
 {{ define "main" }}
 
 <section class="page wrap" aria-labeldyby="title" aria-describedby="title">
-  <h3 id="title">All posts <a href="/tags/">tagged</a> under #{{ .Title }}</h3>
+  <h3 id="title">All posts tagged under #{{ .Title }}</h3>
 
   <div class="article__card-list">
     {{ range .Data.Pages }}
