[WIP] Inline common CSS; Inline SVG icons

--- a/themes/kevingimbel/layouts/partials/footer.html
+++ b/themes/kevingimbel/layouts/partials/footer.html
@@ -3,33 +3,33 @@
     <p>Follow me on various networks:</p>
     <ul class="list__flex">
       <li class="icon-flex__wrap">
-        <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-twitter"></use></svg>
+        <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-social-twitter"></use></svg>
         <a href="https://twitter.com/_kevinatari" title="Follow me on twitter">
           @_kevinatari
         </a>
       </li>
       <li class="icon-flex__wrap">
-        <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-github"></use></svg>
+        <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-social-github"></use></svg>
         <a href="https://github.com/kevingimbel" title="View open source projects on GitHub">/kevingimbel</a>
       </li>
       <li class="icon-flex__wrap">
-        <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-codepen"></use></svg>
+        <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-social-codepen"></use></svg>
         <a href="http://codepen.io/kevingimbel" title="Code Demos on CodePen">/kevingimbel</a>
     </li>
     <li class="icon-flex__wrap">
-      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-reddit"></use></svg>
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-social-reddit"></use></svg>
       <a href="https://reddit.com/u/kevinatari" title="Fun and comments on Reddit">u/kevinatari</a>
     </li>
     <li class="icon-flex__wrap">
-      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-social-instagram"></use></svg>
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-social-instagram"></use></svg>
       <a href="https://www.instagram.com/kevingimbel/" title="Random images on Instagram">/kevingimbel</a>
     </li>
     <li class="icon-flex__wrap">
-      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-playstation"></use></svg>
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-playstation"></use></svg>
       <a href="https://my.playstation.com/atarijunge" title="Gaming on PlayStation">/atarijunge</a>
     </li>
     <li class="icon-flex__wrap">
-      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-steam"></use></svg>
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-steam"></use></svg>
       <a href="https://steamcommunity.com/id/kevingimbel" title="Gaming on Steam">/kevingimbel</a>
     </li>
   </ul>
@@ -38,7 +38,7 @@
   <p>Build with <a href="https://gohugo.io">Hugo</a> - <a href="/imprint/">Imprint</a> - <a href="/now/">now</a></p>
   <p>
     <span class="icon-flex__wrap">
-      <svg class="icon--small icon-flex__icon-left"><use xlink:href="/img/icons.svg#icon-planet"></use></svg>
+      <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-planet"></use></svg>
       <a href="https://uberspace.de">Hosted on asteroids</a>
     </span>
   </p>
