--- a/themes/kevingimbel/layouts/_default/baseof.html
+++ b/themes/kevingimbel/layouts/_default/baseof.html
@@ -19,7 +19,8 @@
   {{ end }}
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="icon" type="image/png" href="/favicon.png" sizes="64x64">
-  <link rel="stylesheet" href="/css/style.css" />
+  <style>{{- partial "inline.css" . | safeCSS -}}</style>
+  <link rel="stylesheet" href="/css/style.css">
   {{ if .IsPage }}
   <link rel="stylesheet" href="/css/highlight.css" />
   {{ end }}
@@ -50,14 +51,13 @@
       </div>
     </div>
   </header>
-
 <main class="content">
-  {{ block "main" . }}
+  {{- block "main" . -}}
     <!-- The part of the page that begins to differ between templates -->
-  {{ end }}
+  {{- end -}}
 </main>
-
-{{ partial "footer.html" }}
-{{ partial "tracking.html" }}
+{{- partial "footer.html" -}}
+{{- partial "tracking.html" -}}
+{{- partial "svg.html" -}}
 </body>
 </html>
