Minor adjustments to footer and 'about the author'.

--- a/themes/kevingimbel/layouts/partials/footer.html
+++ b/themes/kevingimbel/layouts/partials/footer.html
@@ -34,15 +34,21 @@
     </li>
   </ul>
   <hr class="divider">
-  <p>Content &copy; 2013-2017 Kevin Gimbel</p>
-  <p>Build with <a href="https://gohugo.io">Hugo</a> - <a href="/imprint/">Imprint</a> - <a href="/now/">now</a></p>
-  <p>
-    <span class="icon-flex__wrap">
-      <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-planet"></use></svg>
-      <a href="https://uberspace.de">Hosted on asteroids</a>
-    </span>
-  </p>
-  <small>This website uses Google Analytics. <a href="/imprint#tracking" title="Find out more about tracking">More about tracking</a>.</small>
-  <p><small>Links marked with an <b>"R"</b> are amazon referral links, like <a href="http://amzn.to/2ltBPO6" rel="nofollow">this one</a>.</small></p>
+  <div class="flex flex-footer">
+    <div class="flex__item">
+      <p>Content &copy; 2013-2017 Kevin Gimbel</p>
+      <p><span class="icon-flex__wrap">
+        <svg class="icon--small icon-flex__icon-left"><use xlink:href="#icon-planet"></use></svg>
+        <a href="https://uberspace.de">Hosted on asteroids</a>
+      </span></p>
+    </div>
+    <div class="flex__item">
+      <p>Build with <a href="https://gohugo.io">Hugo</a> - <a href="/imprint/">Imprint</a> - <a href="/now/">now</a></p>
+    </div>
+    <div class="flex__item">
+        <p><small>This website uses Google Analytics. <a href="/imprint#tracking" title="Find out more about tracking">More about tracking</a>.</small></p>
+        <p><small>Links marked with an <b>"R"</b> are amazon referral links, like <a href="http://amzn.to/2ltBPO6" rel="nofollow">this one</a>.</small></p>
+    </div>
+  </div>
   </div>
 </footer>
