--- a/themes/kevingimbel/src/sass/core/_footer.scss
+++ b/themes/kevingimbel/src/sass/core/_footer.scss
@@ -24,3 +24,16 @@
     margin-top: 0;
   }
 }
+
+.flex-footer {
+  align-items: center;
+  justify-content: space-between;
+  text-align: left;
+}
+
+
+@media all and (max-width: 50rem) {
+  .flex-footer{
+    flex-direction: column;
+  }
+}
