--- a/themes/kevingimbel/src/sass/style.scss
+++ b/themes/kevingimbel/src/sass/style.scss
@@ -13,4 +13,5 @@
         "modules/highlight",
         "modules/project",
         "modules/article",
-        "modules/about";
+        "modules/about",
+        "modules/search";
