--- a/themes/kevingimbel/src/sass/core/_header.scss
+++ b/themes/kevingimbel/src/sass/core/_header.scss
@@ -2,22 +2,80 @@
   background: $color-accent;
   color: white;
   padding: .5rem 2rem;
-
-    a {
-      color: white;
-
-        &:hover {
-          border-color: $color-accent--secondary;
-        }
+  position: relative;
+  z-index: 2;
+  .inner {
+    position: relative;
+    z-index: 2;
+  }
+    &:after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      transform: skewY(-2deg);
+      background: $color-accent;
+      position: absolute;
+      bottom: -25%;
+      left: 0;
+      z-index: -1;
     }
+}
+
+.site__header a {
+  color: white;
+  &:hover {
+    border-color: $color-accent--secondary;
+  }
+}
+.navigation a {
+  border: none;
+  position: relative;
+
+    &:before {
+      content: '';
+      position: absolute;
+      transform: rotate(2deg);
+      background: #fff;
+      height: 2px;
+      width: 100%;
+      bottom: -6px;
+      left: 0;
+    }
+
+    &:hover:before {
+      background: $color-accent--secondary;
+    }
+}
+
+.navigation li.active a:before {
+  background: $color-accent--secondary;
+  transform: rotate(-2deg);
 }
 
 .site__header h1 {
   font-size: 2rem;
+  text-align: right;
 }
 
 .title-small {
   font-size: .8rem;
+}
+
+.header__intro-description {
+  max-width: 400px;
+  font-size: .8rem;
+  position: relative;
+  padding-top: 1rem;
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: rotate(2deg);
+      height: 2px;
+      width: 100%;
+      background: #fff;
+    }
 }
 
 .header-flex {
