Add custom.css to list of CSS files

--- a/themes/next/layouts/_default/baseof.html
+++ b/themes/next/layouts/_default/baseof.html
@@ -10,6 +10,7 @@
   {{ .Hugo.Generator }}
   <link rel="stylesheet" href="/css/a11y.base.css">
   <link rel="stylesheet" href="/css/a11y.ui.css">
+  <link rel="stylesheet" href="/css/custom.css">
   {{ with .Site.Params.Author.Name }}
   <meta name="author" content="{{ . }}">
   {{ end }}
