Add nav.js file

--- a/themes/next/layouts/_default/baseof.html
+++ b/themes/next/layouts/_default/baseof.html
@@ -49,5 +49,6 @@
   <div class="a11y__overlay"></div>
   <script async type="text/javascript" src="/js/a11y.ui.js"></script>
   <script async type="text/javascript" src="/js/a11y.settings.js"></script>
+  <script async type="text/javascript" src="/js/nav.js"></script>
 </body>
 </html>
