fix aria-labelledby spelling mistake

--- a/themes/next/layouts/_default/list.html
+++ b/themes/next/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <section class="page wrap" aria-labeldyby="page-title" aria-describedby="page-desc">
+  <section class="page wrap" aria-labelledby="page-title" aria-describedby="page-desc">
 
     {{ with .Title }}
     <header class="page-header">
