--- a/themes/next/layouts/partials/settings.html
+++ b/themes/next/layouts/partials/settings.html
@@ -4,11 +4,11 @@
   <hr>
   <form method="dialog" id="settings-form">
     <label for="--color-accent-primary">Main accent color
-      <input type="color" name="--color-accent-primary" value="#283593">
+      <input type="color" name="--color-accent-primary" id="--color-accent-primary"  value="#283593">
     </label><br>
 
     <label for="--color-accent-secondary">Secondary accent color
-      <input type="color" name="--color-accent-secondary" value="#ffd740">
+      <input type="color" name="--color-accent-secondary" id="--color-accent-secondary" value="#ffd740">
     </label><br>
 
     <hr>
